Thu Aug 16 08:09:53 2001  Chad Elliott  <elliott_c@ociweb.com>

        * tests/run_test.lst:

          Added the OTHER requirement to the Thread_Pool_Reactor_Test and
          the Thread_Pool_Reactor_Resume_Test.  These are only built if
          OTHER is part of the ACE components list.

Wed Aug 15 15:50:38 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/WFMO_Reactor.cpp: Don't try to purge the notifications if
	  notify_handler_ is 0.  Thanks to Edan Ayal
	  <edanayal@hotmail.com> for reporting this. 

Wed Aug 15 11:33:26 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/nightlybuilds/builds.lst:
          Remove one build from the list, the machine is being retargeted
          for performance testing.

Wed Aug 15 11:10:22 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * include/makeinclude/wrapper_macros.GNU: Added $(VDIR) for
          OBJDIRS. This prevents hardcoding the value of OBJDIRS. This has
 	  been tested for a dynamic and a static library on Linux. If
 	  there are other platforms that gives problems, please feel free
 	  to revert the changes to the version 4.114 of the file.

Wed Aug 15 09:35:19 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Dirent_Test.cpp:

          Added #define's for VXWORKS that allow this test to function
 	  properly.  Avoid hard-coded relative paths that may not exist on
 	  VxWorks.

Wed Aug 15 09:08:40 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Sock_Connect.cpp:

          Added an implementation to ACE_Sock_Connect::get_ip_interfaces().
          With this, the Enum_Interfaces_Test works correctly.

Wed Aug 15 07:54:49 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * include/makeinclude/wrapper_macros.GNU: Unravelled the mystery a
          bit. The patch that was applied to remove the hard coding of
          OBJDIRS seems to be the problem. The OBJDIRS has been hardcoded
          again. This should fix the problems that we have been seeing in