@@ -1314,6 +1314,7 @@ Blair Zajac <blair@gps.caltech.edu>
 Gary Duzan <gduzan@bbn.com>
 Garry Shammis <Garry.Shamis@kbcfp.com>
 Eamonn Saunders <Esaunders@softricity.com>
+Yev Omenzel <omenzel@yahoo.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
